--- a/proyecto9Angular/src/index.html
+++ b/proyecto9Angular/src/index.html
@@ -25,6 +25,10 @@
 
     <!--<![endif]-->
 
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+
 </head>
 
 <body>
